# eleventy-starter-cli

./: Cargo.toml
src/: main.rs
