[package]
name = "eleventy-starter-cli"
version = "0.1.0"
authors = ["Darrik <30670444+mdarrik@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
degit = "0.1.3"
paw = "1.0.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.70"
structopt = {version = "0.3.25", features = ["paw"]}


[features]


[profile.dev.package.backtrace]
opt-level = 3
